--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
 
+    <!-- Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- Fonts -->
+
     <title>Pixelwave</title>
 
     <!-- external CSS link -->
@@ -20,11 +30,68 @@
 
 <body>
 
-    <div class="nav-home-wrapper">
-        <header></header>
+    <header>
+        <nav class="navbar" id="navbar">
+            <div class="navbar-left">
+                <svg class="navbar-logo" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path
+                            d="M21.7709 2.22891C21.4709 1.92891 20.9809 1.92891 20.6809 2.22891L2.23086 20.6889C1.93086 20.9889 1.93086 21.4789 2.23086 21.7789C2.38086 21.9189 2.57086 21.9989 2.77086 21.9989C2.97086 21.9989 3.16086 21.9189 3.31086 21.7689L21.7709 3.30891C22.0809 3.00891 22.0809 2.52891 21.7709 2.22891Z"
+                            fill="#3B2B53"></path>
+                        <path
+                            d="M14.8205 3.52087V9.18087L9.1805 14.8209V13.2809H6.0905C4.6905 13.2809 4.3005 12.4209 5.2305 11.3709L12.0005 3.67087L12.8005 2.76087C13.9105 1.50087 14.8205 1.84087 14.8205 3.52087Z"
+                            fill="#3B2B53"></path>
+                        <path
+                            d="M18.7697 12.6287L11.9997 20.3287L11.1997 21.2387C10.0897 22.4987 9.17969 22.1587 9.17969 20.4787V17.8187L16.2797 10.7188H17.9097C19.3097 10.7188 19.6997 11.5787 18.7697 12.6287Z"
+                            fill="#3B2B53"></path>
+                    </g>
+                </svg>
+                <a href="#" class="navbar-brand">
+                    Pixelwave
+                </a>
+            </div>
 
-        <main></main>
-    </div>
+            <div class="navbar-right">
+                <div class="nav-menu">
+                    <a href="#" class="nav-link active">HOME</a>
+                    <a href="#work" class="nav-link">WORK</a>
+                    <a href="#about" class="nav-link">ABOUT</a>
+                </div>
+                <button class="nav-cta">
+                    <a href="#contact">Get Started</a>
+                </button>
+
+                <!-- HAMBURGER MENU -->
+                <button class="hamburger" id="hamburger">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                </button>
+
+                <div class="mobile-menu" id="mobileMenu">
+                    <ul>
+                        <li class="mobile-nav-item active">
+                            <a href="#home" class="mobile-nav-link active">HOME</a>
+                        </li>
+                        <li class="mobile-nav-item">
+                            <a href="#work" class="mobile-nav-link">WORK</a>
+                        </li>
+                        <li class="mobile-nav-item">
+                            <a href="#about" class="mobile-nav-link">ABOUT</a>
+                        </li>
+                        <li class="mobile-nav-item">
+                            <a href="#contact" class="mobile-nav-link">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- HAMBURGER MENU -->
+            </div>
+        </nav>
+    </header>
+
+    <main></main>
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
