Wrote HTML for navbar and home section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,23 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+
+        <section id="home" class="home">
+
+            <div class="home-left">
+                <h1>WE CRAFT DIGITAL EXPERIENCES</h1>
+                <p>We blend design and strategy to bring creative ideas to life.</p>
+                <a href="#contact">Get Started</a>
+            </div>
+
+            <div class="home-right">
+                <img src="">
+            </div>
+
+        </section>
+
+    </main>
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
