Optimised home section for tablets and mobile

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
         </section>
         <!-- HOME -->
 
+
+        <!-- WORK -->
+        <section id="work" class="work">
+            <h2>FEATURED PROJECTS</h2>
+            <div>
+                <div>
+                    <img src="">
+                </div>
+            </div>
+        </section>
+        <!-- WORK -->
+
     </main>
 
     <script type="text/javascript" src="js/main.js"></script>
