Added project 1 picture

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <h2>FEATURED PROJECTS</h2>
             <div>
                 <div>
-                    <img src="">
+                    <img src="assets/images/project1.webp" loading="lazy" decoding="async">
+                    <h4>Pictured AI</h4>
                 </div>
             </div>
         </section>
