Wrote HTML for projects section

--- a/index.html
+++ b/index.html
@@ -103,24 +103,41 @@
             </div>
 
             <div class="home-right">
-                <img src="assets/images/home-pic.png" alt="3d illustration of a woman working at a desk">
+                <img src="assets/images/home-pic.webp" alt="3d illustration of a woman working at a desk">
             </div>
 
         </section>
         <!-- HOME -->
 
+        <div class="work-about-wrapper">
 
-        <!-- WORK -->
-        <section id="work" class="work">
-            <h2>FEATURED PROJECTS</h2>
-            <div>
-                <div>
-                    <img src="assets/images/project1.webp" loading="lazy" decoding="async">
-                    <h4>Pictured AI</h4>
+            <!-- WORK -->
+            <section id="work" class="work">
+                <h2>FEATURED PROJECTS</h2>
+                <div class="projects-wrapper">
+                    <div>
+                        <img src="assets/images/jadoo-preview.webp" loading="lazy" decoding="async"
+                            alt="Jadoo travel agency website">
+                        <h4>Jadoo</h4>
+                        <p>Travel Agency</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/biccas-preview.webp" loading="lazy" decoding="async"
+                            alt="Biccas landing page">
+                        <h4>Biccas</h4>
+                        <p>SaaS Agency</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/skilline-preview.webp" loading="lazy" decoding="async"
+                            alt="Skilline learning website">
+                        <h4>Skilline</h4>
+                        <p>Learning Platform</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!-- WORK -->
+            </section>
+            <!-- WORK -->
+
+        </div>
 
     </main>
 
